完善了一下棋盘

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
-    <qresource prefix="/stylesheet">
+    <qresource prefix="/">
+        <file>resources/chess_board_background.jpg</file>
         <file>resources/QTDark.stylesheet</file>
     </qresource>
 </RCC>
